--- a/RCSwitch/RCSwitch.vcxproj
+++ b/RCSwitch/RCSwitch.vcxproj
@@ -212,11 +212,10 @@
     </Link>
   </ItemDefinitionGroup>
   <ItemGroup>
-    <ClInclude Include="..\..\Remote Power\RemotePower\RCSwitch\RCSwitchIO.h" />
     <ClInclude Include="pch.h" />
+    <ClInclude Include="RCSwitchIO.h" />
   </ItemGroup>
   <ItemGroup>
-    <ClCompile Include="..\..\Remote Power\RemotePower\RCSwitch\RCSwitchIO.cpp" />
     <ClCompile Include="pch.cpp">
       <PrecompiledHeader Condition="'$(Configuration)|$(Platform)'=='Debug|Win32'">Create</PrecompiledHeader>
       <PrecompiledHeader Condition="'$(Configuration)|$(Platform)'=='Release|Win32'">Create</PrecompiledHeader>
@@ -225,6 +224,7 @@
       <PrecompiledHeader Condition="'$(Configuration)|$(Platform)'=='Debug|x64'">Create</PrecompiledHeader>
       <PrecompiledHeader Condition="'$(Configuration)|$(Platform)'=='Release|x64'">Create</PrecompiledHeader>
     </ClCompile>
+    <ClCompile Include="RCSwitchIO.cpp" />
   </ItemGroup>
   <ItemGroup>
     <SDKReference Include="WindowsIoT, Version=10.0.10586.0" />
